# python-bigtube

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  PKGBUILD  PORTING_RUST.md  README.md  app.py  bigtube  bigtube.cuda-proj  formats  pyproject.toml  setup.py  utils.py
.appimage/AppDir/: .DirIcon  AppRun  AppRun.wrapped  io.github.eltonfabricio10.bigtube.desktop
.appimage/AppDir/apprun-hooks/: linuxdeploy-plugin-gtk.sh  zz-bigtube-fixup.sh
.appimage/AppDir/usr/lib/: libFLAC.so.14  libFcitx5GClient.so.2  libIex-3_4.so.33  libIlmThread-3_4.so.33  libImath-3_2.so.30  libOpenCL.so.1  libOpenEXR-3_4.so.33  libOpenEXRCore-3_4.so.33  libSoundTouch.so.2  libSvtHevcEnc.so.1  libWildMidi.so.2  libXtst.so.6  libXv.so.1  libXxf86vm.so.1  libZXing.so.4  liba52.so.0  libaa.so.1  libadwaita-1.so.0  libappstream.so.5  libass.so.9  libasyncns.so.0  libavahi-client.so.3  libavahi-common.so.3  libavc1394.so.0  libavformat.so.62  libavtp.so.0  libavutil.so.60  libbluray.so.3  libbs2b.so.0  libcaca.so.0  libcairo-script-interpreter.so.2  libcdda_interface.so.0  libcdda_paranoia.so.0  libcdio.so.19  libchromaprint.so.1  libcolord.so.2  libcups.so.2  libcurl.so.4  libdc1394.so.26  libdca.so.0  (+158 more)
.github/: FUNDING.yml
.github/workflows/: ci.yml  flathub-check.yml  flatpak.yml  release.yml  rust-ci.yml  version-sync.yml
MagicMock/mock.GLib.get_user_config_dir()/139624333067328/bigtube/: config.json
MagicMock/mock.GLib.get_user_config_dir()/139738426655808/bigtube/: config.json
MagicMock/mock.GLib.get_user_config_dir()/139750408763584/bigtube/: config.json
MagicMock/mock.GLib.get_user_config_dir()/139869916546112/bigtube/: config.json
MagicMock/mock.GLib.get_user_config_dir()/139910361076064/bigtube/: config.json
MagicMock/mock.GLib.get_user_config_dir()/140050663801920/bigtube/: config.json
MagicMock/mock.GLib.get_user_config_dir()/140067964748528/bigtube/: config.json
MagicMock/mock.GLib.get_user_config_dir()/140075611751488/bigtube/: config.json
MagicMock/mock.GLib.get_user_config_dir()/140121442731072/bigtube/: config.json
MagicMock/mock.GLib.get_user_config_dir()/140203170841664/bigtube/: config.json
MagicMock/mock.GLib.get_user_config_dir()/140265815049280/bigtube/: config.json
MagicMock/mock.GLib.get_user_config_dir()/140286943855680/bigtube/: config.json
MagicMock/mock.GLib.get_user_config_dir()/140298979181632/bigtube/: config.json
assets/: bigtube.desktop
docs/: README.es.md  README.fr.md  README.pt-BR.md
download_manager/: download_manager.py
flatpak/: io.github.eltonfabricio10.bigtube.yaml  org.big.bigtube.yaml
flatpak/flathub/: README.md  cargo-sources.json  io.github.eltonfabricio10.bigtube.yaml  org.big.bigtube.yaml
locales/: bigtube.pot  es_ES.po  pt_BR.po  pt_PT.po
po/: bigtube.pot  cs_CZ.po  de_DE.po  en_US.po  es_AR.po  es_ES.po  es_MX.po  fr_FR.po  hu_HU.po  it_IT.po  nl_NL.po  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  sk_SK.po
rust/: Cargo.toml  README.md
rust/crates/bigtube-cli/: Cargo.toml  build.rs
rust/crates/bigtube-cli/src/: main.rs
rust/crates/bigtube-core/: Cargo.toml
rust/crates/bigtube-core/src/: backup.rs  channels.rs  config.rs  converter.rs  converter_history.rs  debounce.rs  download_manager.rs  downloader.rs  enums.rs  errors.rs  favorites.rs  helpers.rs  history.rs  json_store.rs  lib.rs  network_checker.rs  paths.rs  player.rs  process.rs  progress.rs  scheduled_downloads.rs  search.rs  search_history.rs  updater.rs  util.rs  validators.rs  ytmusic_api.rs
rust/crates/bigtube-gui/: Cargo.toml  build.rs
rust/crates/bigtube-gui/assets/: style.css
rust/crates/bigtube-gui/icons/: bigtube.gresource.xml
rust/crates/bigtube-gui/src/: app.rs  dialog.rs  i18n.rs  main.rs  objects.rs  player.rs  playlist.rs  row.rs  schedule.rs
rust/crates/bigtube-gui/src/app/: converter.rs  donations.rs  downloads.rs  favorites.rs  search.rs  settings.rs  widgets.rs
rust/packaging/: PKGBUILD  build-appimage.sh  org.big.bigtube.desktop  stage-tree.sh
scripts/: auto_translate.py  extract_translations.py  sync_i18n.py  sync_rust_version.py  sync_version_from_git.py
settings/: settings_dialog.py
src/bigtube/: __init__.py  app.py  main.py  utils.py
src/bigtube/controllers/: __init__.py  converter_controller.py  download_controller.py  download_workflow.py  player_controller.py  search_controller.py  settings_controller.py  startup_manager.py  ytvideostream.py
src/bigtube/core/: clipboard_monitor.py  config.py  converter.py  converter_history.py  download_manager.py  downloader.py  enums.py  helpers.py  history_manager.py  image_loader.py  json_store.py  locales.py  logger.py  mpv_player.py  network_checker.py  scheduled_downloads.py  search.py  search_history.py  updater.py  validators.py
src/bigtube/data/: bigtube.cmb  bigtube.desktop  bigtube.ui  converter_row.ui  cookies.txt  download_row.ui  io.github.eltonfabricio10.bigtube.desktop  io.github.eltonfabricio10.bigtube.metainfo.xml  org.big.bigtube.desktop  org.big.bigtube.metainfo.xml  search_result_row.ui  style.css
src/bigtube/download/: download_manager.py  download_row.py
src/bigtube/i18n/: __init__.py
src/bigtube/settings/: settings.py
src/bigtube/ui/: async_utils.py  converter_row.py  download_row.py  format_dialog.py  gst_widget.py  main_window.py  message_manager.py  mpv_widget.py  playlist_dialog.py  schedule_dialog.py  search_result_row.py  suggestion_popover.py  top_toast.py  video_window.py  window.py
tests/: conftest.py  test_clipboard.py  test_config.py  test_converter.py  test_converter_history.py  test_download_workflow.py  test_downloader.py  test_history.py  test_logger_fix.py  test_scheduler.py  test_search_controller.py  test_search_engine.py  test_settings_controller.py  test_startup_manager.py  test_validators.py
ui/: history_messages.py
(+185 files in other folders)
