[tool.poetry]
name = "python-bigtube"
version = "1.0.1"
description = "Universal Multimedia Downloader"
authors = ["eltonff <eltonfabricio10@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bigtube", from = "src"}]

include = [
    "src/bigtube/data/**/*",
]

[tool.poetry.dependencies]
python = "^3.10"
PyGObject = "^3.44"
requests = "^2.31.0"

[tool.poetry.scripts]
bigtube = "bigtube.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "polib (>=1.2.0,<2.0.0)",
    "deep-translator (>=1.11.4,<2.0.0)",
    "ruff (>=0.8.0,<1.0.0)"
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
exclude = ["src/bigtube/data", "po"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
