[workspace]
resolver = "2"
members = ["crates/bigtube-core", "crates/bigtube-cli", "crates/bigtube-gui"]

[workspace.package]
version = "2.2.44"
edition = "2021"
license = "MIT"
authors = ["eltonff <eltonfabricio10@gmail.com>"]
description = "Universal Multimedia Downloader (Rust port)"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
url = "2"
thiserror = "2"
tracing = "0.1"
